--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon src/server.js",
-    "start": "PORT=5000 node src/server.js"
+    "start": "PORT=8000 node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "csv-parse": "^5.2.0",
     "express": "^4.18.1"
   },
   "devDependencies": {
