--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "NASA mission control api",
   "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "nodemon src/server.js",
     "start": "PORT=8000 node src/server.js"
   },
