--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.2.0",
     "express": "^4.18.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pm2": "^5.2.0"
   },
   "devDependencies": {
     "jest": "^28.1.1",
