--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "client": "npm start --prefix client",
     "watch": "npm run server & npm run client",
     "deploy": "npm run build --prefix client && npm start --prefix server",
+    "deploy-cluster": "npm run build --prefix client && npm run cluster --prefix server",
     "test": "npm test --prefix server && npm test --prefix client"
   },
   "repository": {
@@ -23,8 +24,5 @@
   "bugs": {
     "url": "https://github.com/joseceron/my-nasa-project/issues"
   },
-  "homepage": "https://github.com/joseceron/my-nasa-project#readme",
-  "dependencies": {
-    "pm2": "^5.2.0"
-  }
+  "homepage": "https://github.com/joseceron/my-nasa-project#readme"
 }
