--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "watch": "nodemon src/server.js",
-    "start": "PORT=8000 node src/server.js",
+    "start": "node src/server.js",
     "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
