--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "csv-parse": "^5.2.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.8",
     "morgan": "^1.10.0",
